usersvc/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: usersvc
  name: usersvc
spec:
  type: NodePort
  ports:
  - name: usersvc
    port: 5000
  selector:
    service: usersvc
