usersvc/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: usersvc
spec:
  backend:
    serviceName: usersvc
    servicePort: 5000
